# calo-experiments

./: .flake8  .gitignore  .mypy.ini  AGENTS.md  CITATION.cff  CURRENT_PIPELINE_AND_EXPERIMENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  calo_full_suite.py  pyproject.toml  requirements.txt  run_dynamic_experiment.py
artifacts/: SHA256SUMS  claims.json  provenance.json  provenance.md
artifacts/main_results/: aggregate_summary.json  aggregate_summary.md  full_suite_results.json  seed_42.json  seed_52.json  seed_62.json
artifacts/openwhisk_fixed_validation/: ranking_summary.json  targets.json
config/: openwhisk_standalone.example.json  openwhisk_standalone_memory_1024.conf  openwhisk_standalone_memory_4096.conf  openwhisk_standalone_memory_4096_timeout_900.conf  systems.json
rl_optimizer/: README.md  SIMULATOR_AUDIT.md  __init__.py  action_space.py  algorithm_executor.py  analyze_results.py  artifact_verifier.py  baselines.py  benchmark_features.py  cli.py  codebert_analyzer.py  container_pool.py  durable_io.py  dynamic_environment.py  environment.py  environment_factory.py  evaluator.py  experiment_config.py  experiment_runner.py  inference_benchmark.py  lightgbm_service_surrogate.py  llm_analyzer.py  load_monitor.py  multi_seed_trainer.py  paper_claims.py  pure_ppo.py  result_aggregation.py  result_store.py  se_ppo.py  service_model.py  sim_clock.py  state_components.py  state_space.py  surrogate_model.py  trainer.py  workload_sources.py
scripts/: collect_openwhisk_calibration.py  plot_calibration_overview.py  plot_eval_overview.py  prepare_azure_functions_dataset.py  review_real_platform_online_ab.py  review_real_platform_validation.py  run_openwhisk_x64_full24_collection.py  train_lightgbm_service_surrogate.py
tests/: test_cli_and_artifacts.py  test_domain_contracts.py
(+136 files in other folders)
